Use Apache Common codec